# talon-evocore-sdk

./: .gitignore  README.md
dotnet/Talon.EvoCore/: EvoCore.cs  Talon.EvoCore.csproj
go/: evocore.go  go.mod
java/: pom.xml
java/src/main/java/com/talon/evocore/: EvoCore.java  EvoCoreNative.java
nodejs/: index.d.ts  index.js  package.json
nodejs/scripts/: postinstall.js
php/: composer.json
php/src/: EvoCore.php
python/: pyproject.toml
python/talon_evocore/: __init__.py  _native.py  client.py
rust/: Cargo.toml
rust/src/: lib.rs
