[package]
name = "talon-evocore"
version = "0.1.0"
edition = "2021"
description = "Talon EvoCore — AI 自进化运行时 Rust SDK (原生零损耗绑定)"
license = "LicenseRef-Commercial"
repository = "https://github.com/darkmice/talon-evocore-sdk"
keywords = ["ai", "brain", "evolution", "talon", "agent"]

# Rust SDK 直接依赖 evo_core crate，零 FFI 损耗。
# 其他语言 SDK（Node.js/Go/Python/Java/PHP/.NET）通过 C FFI 调用。
[dependencies]
evo_core = { path = "../../talon-evo-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
